fix: pagination control missalignment because of field changes

--- a/src/components/pagination/pagination.ios.styl
+++ b/src/components/pagination/pagination.ios.styl
@@ -1,8 +1,10 @@
 .q-pagination
-  display inline-block
+  display inline-flex
   input
     text-align center
     -moz-appearance textfield
+  .q-if
+    margin 8px 0 0 0
   .q-btn
     padding 0 5px !important
     &.disabled
